<resources>

    <!-- App level string -->

    <string name="app_name">MyInst</string>
    <string name="welcomeText">Welcome</string>

    <!-- search activity -->
    <string name="app_label">MyInst</string>
    <string name="search_hint">Put your query here</string>

    <!-- Drawer string -->
    <string name="title_section1">Inst</string>
    <string name="title_section2">Albums</string>
    <string name="title_section3">Profile</string>
    <string name="title_section4">Sync</string>
    <string name="title_section5">_______________________</string>
    <string name="title_section6">In a week</string>
    <string name="title_section7">In a month</string>
    <string name="title_section8">Log out</string>

    <!-- Authentication strings -->
    <string name="client_id">5a842f46c9ab4d8fbbb8bfd1ff1a70d2</string>
    <string name="client_secret">5dbaad300b114934bf62b5acaa780464</string>


    <!-- Notify string -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Action bar string -->
    <string name="action_example">Add</string>
    <string name="add">Add</string>
    <string name="add_album">New Album</string>
    <string name="share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome_activity">welcome_activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_searchable">SearchableActivity</string>

    <!-- TAB BAR Use -->
    <string name="hello">Hello World, MainTabActivity!</string>
    <string name="usersFeed">Users</string>
    <string name="discover">Discover</string>
    <string name="upload">Upload</string>
    <string name="activityFeed">Activity</string>
    <string name="profile">Profile</string>

    <string name="title_activity_a">AActivity</string>
    <string name="title_activity_b">BActivity</string>
    <string name="title_activity_c">CActivity</string>
    <string name="title_activity_d">DActivity</string>
    <string name="title_activity_e">EActivity</string>

    <string name="title_activity_individual">IndividualActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_image_detail">Image Detail</string>
    <string name="title_activity_camera">Camera</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_search_user">Search User</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_discover">DiscoverActivity</string>
    <string name="title_activity_display_user_photo">Photos Uploaded by Current User</string>
    <string name="title_activity_bluetooth">Bluetooth Activity</string>
    <string name="title_activity_sendingdata_server">Sendingdata_serverActivity</string>
    <string name="title_activity_sendingdata">SendingdataActivity</string>




    <!-- Further use -->


</resources>