<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/add"
        android:title="@string/add"
        android:icon="@drawable/ic_camera"
        android:showAsAction="withText|ifRoom"
        />
    <item
        android:id="@+id/add_album"
        android:title="@string/add_album"
        android:icon="@drawable/ic_action_add_to_queue"
        android:showAsAction="withText|ifRoom"
        />

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_action_share"
        android:showAsAction="withText|ifRoom"
        />


    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
