<?xml version="1.0" encoding="UTF-8"?>
<TabHost android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <FrameLayout android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget android:id="@android:id/tabs"
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0" />
        <RadioGroup
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:id="@id/main_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RadioButton  android:id="@id/radio_button0"
                android:layout_marginTop="2.0dip"
                android:textColor="@color/text_primary"
                android:text="@string/usersFeed"
                android:drawableTop="@drawable/ic_action_favorite"
                style="@style/main_tab_bottom" />

            <RadioButton  android:id="@id/radio_button1"
                android:layout_marginTop="2.0dip"
                android:textColor="@color/text_primary"
                android:text="@string/discover"
                android:drawableTop="@drawable/ic_action_map"
                style="@style/main_tab_bottom" />

            <RadioButton  android:id="@id/radio_button2"
                android:layout_marginTop="2.0dip"
                android:textColor="@color/text_primary"
                android:text="@string/upload"
                android:drawableTop="@drawable/ic_action_collapse"
                style="@style/main_tab_bottom" />
            <RadioButton  android:id="@id/radio_button3"
                android:layout_marginTop="2.0dip"
                android:text="@string/activityFeed"
                android:textColor="@color/text_primary"
                android:drawableTop="@drawable/ic_action_not_important"
                style="@style/main_tab_bottom" />
            <RadioButton  android:id="@id/radio_button4"
                android:layout_marginTop="2.0dip"
                android:text="@string/profile"
                android:textColor="@color/text_primary"
                android:drawableTop="@drawable/ic_action_person"
                style="@style/main_tab_bottom" />

        </RadioGroup>
    </LinearLayout>
</TabHost>